pts-core: Other small tweaks and optimizations
pts-core: Fixes an odd scenario where on Windows after 2 runs, further runs of that test profile for current run could fail in select (random) instances
pts-core: Write out system notes for each system when generating PDF result output
pts-core: CSV output improvements
pts_Graph: Condensing improvements for large graphs
pts_Graph: Various formatting improvements
phodevi: Intel GPU reporting improvements
phodevi: BIOS version reporting support extended to Windows

Phoronix Test Suite 8.6.1-Spydeberg
21 February 2019

pts-core: Dynamically honoring the CLI terminal width (no longer cache the value on Linux/BSD/macOS)
pts-core: BSD external dependency updates
ob_auto_compare: Minor formatting updates

Phoronix Test Suite 8.6.0-Spydeberg
5 February 2019

pts-core: Other small tweaks and fixes
pts-core: Fix for "/installed" virtual suite not including the proprietary/commercial tests that are installed
ob_auto_compare: Allow showing more results in the embedded percentile graphs

Phoronix Test Suite 8.6.0 Milestone 3
27 January 2019

pts-core: Better handling on Windows when there are space(s) in the paths
pts-core: Add __event_post_run_stats module hook
pts-core: Inline display of result distributions from OpenBenchmarking.org on applicable results
pts-core: Don't try to run tests from result file(s) or suite(s) that were not installed
pts-core: More accurate time reporting when result files are passed to `phoronix-test-suite estimate-run-time`
phodevi: Better reporting of NVMe drive strings on BSDs

Phoronix Test Suite 8.6.0 Milestone 2
19 January 2019

pts-core: Update Mac OS X to macOS references
pts-core: Add result-file-stats sub-command to show more test result statistics
pts-core: Show geometric mean and harmonic mean data at end of benchmarking process when relevant as part of post-run stats
pts-core: Improved formatting of file download text user interface for downloading of dependencies on Microsoft Windows