@@ -1,0 +1,47 @@
+<?php
+
+/*
+	Phoronix Test Suite
+	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
+	Copyright (C) 2019, Phoronix Media
+	Copyright (C) 2019, Michael Larabel
+
+	This program is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 3 of the License, or
+	(at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with this program. If not, see <http://www.gnu.org/licenses/>.
+*/
+
+class result_file_raw_to_csv implements pts_option_interface
+{
+	const doc_section = 'Result Management';
+	const doc_description = 'This option will read a saved test results file and output the raw result file run data to a CSV file. This raw (individual) result file output is intended for data analytic purposes where the result-file-to-csv is more end-user-ready.';
+
+	public static function argument_checks()
+	{
+		return array(
+		new pts_argument_check(0, array('pts_types', 'is_result_file'), null)
+		);
+	}
+	public static function run($r)
+	{
+		$result_file = new pts_result_file($r[0]);
+		$result_output = pts_result_file_output::result_file_raw_to_csv($result_file);
+
+		// To save the result:
+		$file = pts_core::user_home_directory() . $r[0] . '-raw.csv';
+		file_put_contents($file, $result_output);
+
+		echo PHP_EOL . pts_client::cli_just_bold('Saved To: ') . $file . PHP_EOL;
+	}
+}
+
+?>
